[gd_scene load_steps=36 format=3 uid="uid://cch8otb7qeu68"]

[ext_resource type="Script" path="res://main/main.gd" id="1_ux161"]
[ext_resource type="Script" path="res://addons/resonate/music_manager/music_bank.gd" id="2_fe5tn"]
[ext_resource type="PackedScene" uid="uid://20ok8gqsfhqm" path="res://menu/menu.tscn" id="2_gmm5b"]
[ext_resource type="Theme" uid="uid://dcsgo6t80eu1w" path="res://debug/debug_theme.tres" id="2_n72wt"]
[ext_resource type="Script" path="res://debug/fps_display.gd" id="3_8gron"]
[ext_resource type="PackedScene" uid="uid://c3mhsid5x7d8r" path="res://game/levels/level_1.tscn" id="3_j42tc"]
[ext_resource type="Script" path="res://addons/resonate/music_manager/music_track_resource.gd" id="3_twdqf"]
[ext_resource type="Shader" path="res://vfx/blur.gdshader" id="4_1p6e5"]
[ext_resource type="Shader" path="res://vfx/trails.gdshader" id="4_8qnfu"]
[ext_resource type="Script" path="res://addons/resonate/music_manager/music_stem_resource.gd" id="4_38lop"]
[ext_resource type="PackedScene" uid="uid://bfxb5ikio7qa6" path="res://game/levels/level_2.tscn" id="4_n3ouh"]
[ext_resource type="PackedScene" uid="uid://es1vjbxmkae6" path="res://game/levels/level_3.tscn" id="5_7dyse"]
[ext_resource type="PackedScene" uid="uid://dcev151nwxoqc" path="res://game/levels/level_4.tscn" id="6_ouojc"]
[ext_resource type="Shader" path="res://vfx/screen_transition.gdshader" id="6_t62yq"]
[ext_resource type="AudioStream" uid="uid://d12syggdqbhdf" path="res://music/main.ogg" id="9_js5yk"]
[ext_resource type="Script" path="res://debug/big_viewport.gd" id="11_pd3vo"]
[ext_resource type="Script" path="res://debug/unlock_button.gd" id="15_7qxnp"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_bank.gd" id="15_ev3wf"]
[ext_resource type="Script" path="res://debug/menu_button.gd" id="16_dn6qv"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="16_wc8vy"]
[ext_resource type="AudioStream" uid="uid://ry6xgk32slty" path="res://main/select.wav" id="17_cbl0k"]
[ext_resource type="AudioStream" uid="uid://crocsp47wkmws" path="res://main/input.wav" id="18_getft"]
[ext_resource type="PackedScene" uid="uid://c6jc8r3jg0ju1" path="res://splash_screen/splash_screen.tscn" id="23_s8d4m"]

[sub_resource type="Resource" id="Resource_x8cup"]
script = ExtResource("4_38lop")
name = "main"
enabled = true
volume = 0.0
stream = ExtResource("9_js5yk")

[sub_resource type="Resource" id="Resource_5hsw7"]
script = ExtResource("3_twdqf")
name = "main"
bus = ""
stems = Array[ExtResource("4_38lop")]([SubResource("Resource_x8cup")])

[sub_resource type="Gradient" id="Gradient_vb0eu"]
offsets = PackedFloat32Array(0.605)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uwfqi"]
gradient = SubResource("Gradient_vb0eu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ul62x"]
shader = ExtResource("6_t62yq")
shader_parameter/anim_time = 2.5
shader_parameter/t = 1.0
shader_parameter/old_texture = SubResource("GradientTexture1D_uwfqi")

[sub_resource type="ViewportTexture" id="ViewportTexture_npbsp"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nbjqi"]
resource_local_to_scene = true
shader = ExtResource("4_8qnfu")
shader_parameter/viewport = SubResource("ViewportTexture_npbsp")

[sub_resource type="ViewportTexture" id="ViewportTexture_ofkc0"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_gtbim"]
viewport_path = NodePath("SubViewportContainer/SubViewport2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eegpy"]
shader = ExtResource("4_1p6e5")
shader_parameter/blur_type = 2
shader_parameter/blur_amount = 1
shader_parameter/blur_radius = 1.0
shader_parameter/blur_direction = Vector2(1, 1)

[sub_resource type="Resource" id="Resource_umv3t"]
script = ExtResource("16_wc8vy")
name = "select"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("17_cbl0k")])

[sub_resource type="Resource" id="Resource_t1lk4"]
script = ExtResource("16_wc8vy")
name = "input"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("18_getft")])

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ux161")
menu = ExtResource("2_gmm5b")
levels = Array[PackedScene]([ExtResource("3_j42tc"), ExtResource("4_n3ouh"), ExtResource("5_7dyse"), ExtResource("6_ouojc")])

[node name="MusicBank" type="Node" parent="."]
script = ExtResource("2_fe5tn")
label = "music"
bus = "music"
tracks = Array[ExtResource("3_twdqf")]([SubResource("Resource_5hsw7")])

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
size = Vector2i(160, 144)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewport"]
layer = 100

[node name="SceneChangeShader" type="ColorRect" parent="SubViewport/CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ul62x")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.494118, 0.545098, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -72.0
offset_right = 80.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(80, 72)

[node name="SubViewport2" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(160, 144)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport2"]
material = SubResource("ShaderMaterial_nbjqi")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DebugWindow" type="Window" parent="."]
title = "Debug"
initial_position = 2
size = Vector2i(1024, 1024)
unresizable = true
theme = ExtResource("2_n72wt")

[node name="Control" type="Control" parent="DebugWindow"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DebugWindow/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DebugWindow/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 192.0
offset_right = 512.0
offset_bottom = 288.0
grow_horizontal = 2
texture = SubResource("ViewportTexture_ofkc0")

[node name="Label2" type="Label" parent="DebugWindow/Control/TextureRect"]
texture_filter = 2
layout_mode = 0
offset_top = 288.0
offset_right = 66.0
offset_bottom = 311.0
text = "Viewport 1"

[node name="TextureRect2" type="TextureRect" parent="DebugWindow/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_right = 182.0
offset_bottom = 288.0
grow_horizontal = 2
texture = SubResource("ViewportTexture_gtbim")

[node name="Label2" type="Label" parent="DebugWindow/Control/TextureRect2"]
texture_filter = 2
layout_mode = 0
offset_top = 288.0
offset_right = 66.0
offset_bottom = 311.0
text = "Viewport 2"

[node name="Label" type="Label" parent="DebugWindow/Control"]
layout_mode = 0
offset_right = 66.0
offset_bottom = 23.0
text = "asdfasdf"
script = ExtResource("3_8gron")

[node name="SubViewportContainer" type="SubViewportContainer" parent="DebugWindow"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -160.0
offset_right = 512.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="DebugWindow/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1024, 320)
render_target_update_mode = 4
script = ExtResource("11_pd3vo")

[node name="Camera2D" type="Camera2D" parent="DebugWindow/SubViewportContainer/SubViewport"]

[node name="Button" type="Button" parent="DebugWindow"]
offset_top = 16.0
offset_right = 111.0
offset_bottom = 31.0
text = "Unlock all levels"
script = ExtResource("15_7qxnp")

[node name="Button2" type="Button" parent="DebugWindow"]
offset_top = 32.0
offset_right = 37.0
offset_bottom = 47.0
text = "Menu"
script = ExtResource("16_dn6qv")

[node name="PostProcessing" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_eegpy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SoundBank" type="Node" parent="."]
script = ExtResource("15_ev3wf")
label = "menu"
events = Array[ExtResource("16_wc8vy")]([SubResource("Resource_umv3t"), SubResource("Resource_t1lk4")])

[node name="CanvasLayer" parent="." instance=ExtResource("23_s8d4m")]
process_mode = 3
